After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 751890 - Magnatune plugin doesn't invoke the callback in search operations with 0 result
Magnatune plugin doesn't invoke the callback in search operations with 0 result
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: plugins
0.2.x
Other Linux
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2015-07-03 10:54 UTC by Hapoofesgeli
Modified: 2015-07-15 08:59 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
magnatune: Fix search never finishing if no results (1.09 KB, patch)
2015-07-15 07:34 UTC, Bastien Nocera
committed Details | Review

Description Hapoofesgeli 2015-07-03 10:54:47 UTC
Unlike other plugins like Jamendo, Magnatune doesn't invoke the callback in search operations when no results are found. And there are no logs about the operation getting finished.

Grilo-DEBUG: [source] grl-source.c:3875: requested fast keys
Grilo-DEBUG: [source] grl-source.c:1032: operation_set_ongoing (21)
Grilo-DEBUG: [source] grl-source.c:2482: search_idle
Grilo-DEBUG: [source] grl-source.c:893: operation_set_started (21)
Grilo-DEBUG: [magnatune] grl-magnatune.c:891: magnatune_execute_search
Grilo-DEBUG: [magnatune] grl-magnatune.c:681: magnatune_sqlite_execute
Grilo-DEBUG: [magnatune] grl-magnatune.c:545: magnatune_check_update
Comment 1 Bastien Nocera 2015-07-15 07:34:20 UTC
Created attachment 307450 [details] [review]
magnatune: Fix search never finishing if no results

When no results are returned from a search, we'd skip to the error path,
but without an error to return. Thus, we'd never mark the search
operation as finished.
Comment 2 Victor Toso 2015-07-15 08:56:23 UTC
Review of attachment 307450 [details] [review]:

Looks good!

Tested with grl-launch:
GRL_DEBUG=magnatune:* grl-launch-0.2 -k title -S search nonexist grl-magnatune
Comment 3 Bastien Nocera 2015-07-15 08:59:54 UTC
Attachment 307450 [details] pushed as 64767da - magnatune: Fix search never finishing if no results