magnatune: Fix search never finishing if no results

When no results are returned from a search, we'd skip to the error path,
but without an error to return. Thus, we'd never mark the search
operation as finished.

https://bugzilla.gnome.org/show_bug.cgi?id=751890